# boilerplates

./: README.md
actix-web/: Cargo.toml
angular/: package.json
astro/: package.json
astro-react/: package.json
astro-svelte/: astro.config.mjs  package.json
astro-vue/: astro.config.mjs  package.json
axum/: Cargo.toml
axum/src/: main.rs
axum/src/models/: mod.rs
axum/src/routes/: hello.rs
bun-elysia/: README.md  package.json  tsconfig.json
django/: README.md  manage.py  requirements.txt
dotnet/: Program.cs  README.md
electron-react/: README.md  electron.vite.config.ts  package.json
elixir-phoenix/: mix.exs
express-ts/: package.json  tsconfig.json
fastapi/: README.md  main.py  requirements.txt
fastify/: package.json
fiber/: go.mod  main.go
flask/: .env.example  main.py  requirements.txt
flutter/: pubspec.yaml
gin/: go.mod
go-cli/: go.mod  main.go
graphql-apollo/: package.json
hono/: package.json  tsconfig.json
ktor/: build.gradle.kts
langchain/: .env.example  main.py  requirements.txt
laravel/: .env.example  README.md  composer.json
ml-starter/: README.md  requirements.txt  train.py
nestjs/: package.json  tsconfig.json
nextjs/: package.json
npm-library/: README.md  package.json  tsconfig.json
nuxt3/: README.md  nuxt.config.ts  package.json
payload-cms/: .env.example  README.md  next.config.ts  package.json
python-cli/: README.md  pyproject.toml  requirements.txt
python-cli/src/: main.py
python-cli/src/commands/: hello.py
python-cli/src/utils/: output.py
qwik/: package.json  vite.config.ts
(+177 files in other folders)
