[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mycli"
version = "0.1.0"
description = "A CLI tool built with Typer"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.15.0",
    "rich>=13.9.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mycli = "src.main:app"

[tool.setuptools.packages.find]
where = ["."]
